# time-series

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup_validation.py  test_structure.py
notebooks/: bandwidth_prediction.ipynb  bandwidth_prediction_enhanced.ipynb
src/: __init__.py
src/app/: __init__.py  cli.py  interactive.py
src/data/: __init__.py  loader.py
src/features/: __init__.py  event_features.py  temporal_features.py
src/models/: __init__.py  predictor.py  trainer.py
