[project]
name = "time-series"
version = "1.0.0"
description = "Comprehensive bandwidth utilization prediction system with exogenous event features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.5",
    "optuna>=4.1.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "jupyter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
